Fixed some margin spacing on labels

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ main
     background-image: linear-gradient(rgb(14, 14, 13), rgb(9, 5, 29), rgb(14, 14, 13));
 }
 
+label {
+    display: inline-block;
+    margin-top: 10px;
+}
+
 form input
 {
     background-color: rgb(196, 212, 221);
